...
    context.push('/signup');
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(title: const Text('ログイン')),
      body: SingleChildScrollView(
        child: Padding(
          padding: const EdgeInsets.all(16.0),
          child: Column(
            mainAxisAlignment: MainAxisAlignment.center,
            crossAxisAlignment: CrossAxisAlignment.stretch,
...
                  ],
                ),
              ),
              const SizedBox(height: 24),
              TextButton(
                onPressed: _navigateToSignup,
                child: const Text('アカウントをお持ちでない方は新規登録'),
              ),
            ],
          ),
        ),
      ),
    );
...
