...
          ),
          unselectedLabelStyle: const TextStyle(fontSize: 12),
          items: const <BottomNavigationBarItem>[
            BottomNavigationBarItem(
              icon: Icon(Icons.home_outlined),
              activeIcon: Icon(Icons.home),
              label: 'ホーム',
            ),
            BottomNavigationBarItem(
              icon: Icon(Icons.groups_3_outlined),
              activeIcon: Icon(Icons.groups_3),
              label: 'フレンド',
            ),
...
